src/objects/Payroll__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedProfBillableHoursCNE__c</fullName>
        <label>ApprovedProfBillableHoursCNE</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedProfBillableHours__c</fullName>
        <label>Approved Prof Billable Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedTWBillableHoursCNE__c</fullName>
        <label>ApprovedTWBillableHoursCNE</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedTWBillableHours__c</fullName>
        <label>Approved T/W Billable Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <formula>TEXT(VALUE(Opportunity__r.Related_Case__r.CaseNumber))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DateSubmitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Payroll</relationshipLabel>
        <relationshipName>Payroll</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsUserAdded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUserAdded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OppOwnerId__c</fullName>
        <formula>CASESAFEID(Opportunity__r.OwnerId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Report</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payroll</relationshipLabel>
        <relationshipName>Payroll</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReportNumber__c</fullName>
        <formula>Opportunity__r.Report_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Number</label>
        <type>Text</type>
    </fields>
    <label>Payroll</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>